--- a/echo-control/public/oauth-test.html
+++ b/echo-control/public/oauth-test.html
@@ -351,7 +351,7 @@
 
         async function testRefresh() {
             try {
-                const response = await fetch(`${config.authServer}/api/oauth/refresh`, {
+                const response = await fetch(`${config.authServer}/api/oauth/token`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
